# aapt-sm-2026

./: .gitignore  OPEN-QUESTIONS.md  README.md  presentation.qmd  pyproject.toml  timing.md
data/: analyze.py  check_deployed.sh  fetch_commits.py  find_cold_open.py  join_grades.py  mine_usage.sh  pre_grade_feedback.py  rebuild.py  regrades.py
